--- a/.github/workflows/CI-CD-Docs.yml
+++ b/.github/workflows/CI-CD-Docs.yml
@@ -9,7 +9,7 @@ on:
       - '!.github/**'
 
 env:
-  VERSION: '1.0.0-beta-7'
+  VERSION: ''
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
         with:
           setAllVars: true
       - name: Setting VERSION
-        run: echo "::set-env name=VERSION::NBGV_NuGetPackageVersion"
+        run: echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
