--- a/.github/workflows/CI-CD-Docs.yml
+++ b/.github/workflows/CI-CD-Docs.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           setAllVars: true
       - name: Setting VERSION
-        run: echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
+        run: echo ::set-env name=VERSION::$(echo $NBGV_NuGetPackageVersion)
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
