--- a/src/bunit.testassets/bunit.testassets.csproj
+++ b/src/bunit.testassets/bunit.testassets.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
 	</ItemGroup>
 
