--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,7 +10,7 @@ on:
     - cron: '0 19 * * 0'
 
 env:
-  VERSION: ''
+  VERSION: '1.0.0'
   BRANCH: ''
 
 jobs:
@@ -53,13 +53,9 @@ jobs:
     #- run: |
     #   make bootstrap
     #   make release
-    - uses: dotnet/nbgv@master
-      with:
-        setAllVars: true
-    - name: Setting VERSION and BRANCH env
-      run: |
-        echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
-        echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+    - name: Setting BRANCH env
+      run: echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+    
     - name: Update tokens in project files
       uses: cschleiden/replace-tokens@v1
       with:
