--- a/src/bunit.testassets/bunit.testassets.csproj
+++ b/src/bunit.testassets/bunit.testassets.csproj
@@ -1,16 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
 		<RazorLangVersion>3.0</RazorLangVersion>
 		<RootNamespace>Bunit.TestAssets</RootNamespace>
 		<AssemblyName>Bunit.TestAssets</AssemblyName>
 	</PropertyGroup>
 
-	<ItemGroup>
+	<PropertyGroup>
+		<!--
+			TODO: Added because of bug in P7: https://github.com/dotnet/aspnetcore/issues/24794				
+		-->
+		<WarningsAsErrors>CS8602;CS8603;CS8625</WarningsAsErrors>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.7.*" />
 	</ItemGroup>
 
 </Project>
