--- a/src/bunit.xunit.tests/bunit.xunit.tests.csproj
+++ b/src/bunit.xunit.tests/bunit.xunit.tests.csproj
@@ -1,15 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Bunit</RootNamespace>
 		<AssemblyName>Bunit.Xunit.Tests</AssemblyName>
 	</PropertyGroup>
 
-	<ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.7.*" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="System.Reflection.Metadata" Version="1.8.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
 		<PackageReference Include="Moq" Version="4.14.1" />
