--- a/src/bunit/bunit.csproj
+++ b/src/bunit/bunit.csproj
@@ -1,42 +1,43 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <NoBuild>true</NoBuild>
-    <IncludeBuildOutput>false</IncludeBuildOutput>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+		<NoBuild>true</NoBuild>
+		<IncludeBuildOutput>false</IncludeBuildOutput>
+	</PropertyGroup>
 
-  <PropertyGroup>
-    <PackageId>bunit</PackageId>
-    <Title>bUnit</Title>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/egil/bunit</RepositoryUrl>
-    <PackageProjectUrl>https://bunit.egilhansen.com</PackageProjectUrl>
-    <PackageTags>bUnit;razor components;blazor components;unit testing;testing blazor components;blazor server;blazor wasm</PackageTags>
-    <Authors>Egil Hansen</Authors>
-    <Company>Egil Hansen</Company>
-    <Product>bUnit</Product>
-    <Description>bUnit is a testing library for Blazor components.
+	<PropertyGroup>
+		<PackageId>bunit</PackageId>
+		<Title>bUnit</Title>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/egil/bunit</RepositoryUrl>
+		<PackageProjectUrl>https://bunit.egilhansen.com</PackageProjectUrl>
+		<PackageTags>bUnit;razor components;blazor components;unit testing;testing blazor components;blazor server;blazor wasm</PackageTags>
+		<Authors>Egil Hansen</Authors>
+		<Company>Egil Hansen</Company>
+		<Product>bUnit</Product>
+		<Description>
+			bUnit is a testing library for Blazor components.
 
-You can easily define components under test in C# or Razor syntax and verify outcome using semantic HTML diffing/comparison logic. You can interact with and inspect the component under test, trigger event handlers, provide cascading values, inject services, mock JavaScript interopt, and perform snapshot testing.
+			You can easily define components under test in C# or Razor syntax and verify outcome using semantic HTML diffing/comparison logic. You can interact with and inspect the component under test, trigger event handlers, provide cascading values, inject services, mock JavaScript interopt, and perform snapshot testing.
 
-NOTE: This version includes support for xUnit as the general-purpose test framework. In other words, installing this package is equivalent to installing the packages "bunit.core", "bunit.web", and "bunit.xunit".
+			NOTE: This version includes support for xUnit as the general-purpose test framework. In other words, installing this package is equivalent to installing the packages "bunit.core", "bunit.web", and "bunit.xunit".
 
-If you prefer Nunit or MSTest, just install the “bunit.core” and “bunit.web” packages.
+			If you prefer Nunit or MSTest, just install the “bunit.core” and “bunit.web” packages.
 		</Description>
-  </PropertyGroup>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Nerdbank.GitVersioning" Version="3.1.91">
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		  <PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\bunit.core\bunit.core.csproj" />
-    <ProjectReference Include="..\bunit.web\bunit.web.csproj" />
-    <ProjectReference Include="..\bunit.xunit\bunit.xunit.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\bunit.core\bunit.core.csproj" />
+		<ProjectReference Include="..\bunit.web\bunit.web.csproj" />
+		<ProjectReference Include="..\bunit.xunit\bunit.xunit.csproj" />
+	</ItemGroup>
 
 </Project>
 
