--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,12 @@
 name: CI
 
 on:
+  pull_request:
+    branches:
+      - dev
+    paths:
+      - 'sample/**'
+      - 'src/**'
   push:
     branches:
       - dev
