--- a/.github/workflows/DEV-GPR-PUSH.yml
+++ b/.github/workflows/DEV-GPR-PUSH.yml
@@ -8,6 +8,7 @@ on:
       - 'src/bunit.core/**'
       - 'src/bunit.web/**'
       - 'src/bunit.xunit/**'
+      - 'src/bunit.template/**'
 
 env:
   VERSION: ''
