--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2.2.0
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
@@ -22,23 +22,23 @@ jobs:
 
       - name: Run dotnet format
         id: format
-        uses: xt0rted/dotnet-format@v1.0.2
+        uses: xt0rted/dotnet-format@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           action: "fix"
           only-changed-files: true
           folder: "src"
       
-      - name: Commit files
-        if: steps.format.outputs.has-changes == 'true'
-        uses: EndBug/add-and-commit@v4.1.0
-        with:
-          author_name: Github Actions
-          author_email: actions@github.com
-          message: Automated dotnet-format update
-          ref: ${{ github.head_ref }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Commit files
+      #   if: steps.format.outputs.has-changes == 'true'
+      #   uses: EndBug/add-and-commit@v4.1.0
+      #   with:
+      #     author_name: Github Actions
+      #     author_email: actions@github.com
+      #     message: Automated dotnet-format update
+      #     ref: ${{ github.head_ref }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   code-scan:    
     runs-on: ubuntu-latest
@@ -55,28 +55,38 @@ jobs:
     - run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
 
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.1.x'
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.100-preview.7.20366.6'
+    - name: DOTNET HACK
+      shell: pwsh
+      run: |
+        $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
+        $root = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Parent;
+        $directories = Get-ChildItem $root | Where-Object { $_.Name -ne $version };
+        foreach ($dir in $directories) {
+          $from = $dir.FullName;
+          $to = "$root/$version";
+          Write-Host Copying from $from to $to;
+          Copy-Item "$from\*" $to -Recurse -Force;
+        }
+
+    - uses: dotnet/nbgv@master
+      with:
+        setAllVars: true
+
+    - name: Building library
+      run: dotnet build src -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       with:
         languages: csharp
         config-file: ./.github/codeql/codeql-config.yml
-
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
-
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 https://git.io/JvXDl
-
-    # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
-    #    and modify them (or add more) to build your code if your project
-    #    uses a compiled language
-
-    #- run: |
-    #   make bootstrap
-    #   make release
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1          
