--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,12 +1,6 @@
 name: CI
 
 on:
-  pull_request:
-    branches:
-      - dev
-    paths:
-      - 'sample/**'
-      - 'src/**'
   push:
     branches:
       - dev
@@ -43,7 +37,7 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.100-preview.7.20366.6'
-      - name: DOTNET HACK
+      - name: Move .net SDLs to shared folder (hack)
         shell: pwsh
         run: |
           $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
