--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -47,58 +47,42 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
 
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1.x'
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.100-preview.7.20366.6'
+      - name: Move .net SDLs to shared folder (hack)
+        shell: pwsh
+        run: |
+          $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
+          $root = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Parent;
+          $directories = Get-ChildItem $root | Where-Object { $_.Name -ne $version };
+          foreach ($dir in $directories) {
+            $from = $dir.FullName;
+            $to = "$root/$version";
+            Write-Host Copying from $from to $to;
+            Copy-Item "$from\*" $to -Recurse -Force;
+          }
+
       - name: Install dotnet-format
-        run: dotnet tool install -g dotnet-format # --version 3.3.111304
+        run: dotnet tool install -g dotnet-format
 
-      - name: Run dotnet-format
-        run: dotnet format src --verbosity diag
+      # - name: Run dotnet-format
+      #   run: dotnet format src --verbosity diag
 
-      - name: Commit formatted files
-        if: failure()
-        run: echo 'Files were formatted'
-      # - name: Commit files
-      #   if: steps.format.outputs.has-changes == 'true'
-      #   uses: EndBug/add-and-commit@v4.1.0
-      #   with:
-      #     author_name: Github Actions
-      #     author_email: actions@github.com
-      #     message: Automated dotnet-format update
-      #     ref: ${{ github.head_ref }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Add dotnet-format problem matcher
-      #   uses: xt0rted/dotnet-format-problem-matcher@v1
-
-      # - name: Restore dotnet tools
-      #   uses: xt0rted/dotnet-tool-restore@v1
-
-      # - name: Run dotnet format
-      #   uses: xt0rted/dotnet-format@v1
-      #   with:
-      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
-      #     action: "fix"
-      #     only-changed-files: "true"
-
-      # - name: Run dotnet format
-      #   id: format
-      #   uses: xt0rted/dotnet-format@v1.0.1
-      #   with:
-      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
-      #     action: "fix"
-      #     only-changed-files: true
-      #     folder: "src"
-      
-      # - name: Commit files
-      #   if: steps.format.outputs.has-changes == 'true'
-      #   uses: EndBug/add-and-commit@v4.1.0
-      #   with:
-      #     author_name: Github Actions
-      #     author_email: actions@github.com
-      #     message: Automated dotnet-format update
-      #     ref: ${{ github.head_ref }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit formatted files      
+        if: steps.format.outputs.has-changes == 'true'
+        uses: EndBug/add-and-commit@v4.1.0
+        with:
+          add: 'src'
+          author_name: Github Actions
+          author_email: actions@github.com
+          message: Automated dotnet-format update
+          #ref: ${{ github.head_ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   code-scan:    
     runs-on: ubuntu-latest
