--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -11,17 +11,20 @@ jobs:
   dotnet-test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
       - uses: actions/checkout@v2   
         with:
           fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
-      - uses: dotnet/nbgv@master
+      #- uses: dotnet/nbgv@master
+      
+      - name: Install dotnet SDK's
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.100-preview.7.20366.6'
-      - name: Move .net SDLs to shared folder (hack)
+      - name: Move .net SDK's to shared folder (hack)
         shell: pwsh
         run: |
           $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
@@ -33,27 +36,30 @@ jobs:
             Write-Host Copying from $from to $to;
             Copy-Item "$from\*" $to -Recurse -Force;
           }
+
       - name: Build library
         run: dotnet build src -c Release -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+
       - name: Running unit tests
         run: dotnet test src -c Release --no-build --no-restore --verbosity normal /nowarn:CS1591
 
   dotnet-format:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
 
+      - name: Install dotnet SDK's
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.100-preview.7.20366.6'
-      - name: Move .net SDLs to shared folder (hack)
+      - name: Move .net SDK's to shared folder (hack)
         shell: pwsh
         run: |
           $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
@@ -79,7 +85,7 @@ jobs:
           author_name: Github Actions
           author_email: actions@github.com
           message: Automated dotnet-format update
-          #ref: ${{ github.head_ref }}
+          ref: ${{ github.head_ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -93,18 +99,19 @@ jobs:
         # a pull request then we can checkout the head.
         fetch-depth: 0
 
-    # If this run was triggered by a pull request event, then checkout
-    # the head of the pull request instead of the merge commit.
+      # If this run was triggered by a pull request event, then checkout
+      # the head of the pull request instead of the merge commit.
     - run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
 
+    - name: Install dotnet SDK's
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.x'
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.100-preview.7.20366.6'
-    - name: DOTNET HACK
+    - name: Move .net SDK's to shared folder (hack)
       shell: pwsh
       run: |
         $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
@@ -117,9 +124,9 @@ jobs:
           Copy-Item "$from\*" $to -Recurse -Force;
         }
 
-    - uses: dotnet/nbgv@master
-      with:
-        setAllVars: true
+    # - uses: dotnet/nbgv@master
+    #   with:
+    #     setAllVars: true
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
