--- a/.github/workflows/publish-nightly-to-gpr.yml
+++ b/.github/workflows/publish-nightly-to-gpr.yml
@@ -1,43 +1,49 @@
-name: CI
+name: Push nightly to GPR
 
 on:
   push:
     branches:
       - dev
     paths:
-      - 'sample/**'
-      - 'src/**'
+      - 'src/bunit.core/**'
+      - 'src/bunit.web/**'
+      - 'src/bunit.xunit/**'
+      - 'src/bunit.template/**'
 
 env:
   VERSION: ''
   BRANCH: ''
   
 jobs:  
-  build:
-    name: Build and verify library    
+  push-to-gpr:
     runs-on: ubuntu-latest  
     steps:
-      - uses: actions/checkout@v2   
+      - name: Checkout Repository
+        uses: actions/checkout@v2   
         with:
           fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+
       - uses: dotnet/nbgv@master
         with:
           setAllVars: true
+
       - name: Setting VERSION and BRANCH env
         run: |
           echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
           echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["*.csproj", "**/*.csproj"]'
+
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.100-preview.7.20366.6'
-      - name: Move .net SDLs to shared folder (hack)
+      - name: DOTNET HACK
         shell: pwsh
         run: |
           $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
@@ -48,25 +54,20 @@ jobs:
             $to = "$root/$version";
             Write-Host Copying from $from to $to;
             Copy-Item "$from\*" $to -Recurse -Force;
-          } 
+          }    
+
       - name: Building library
-        run: |
-          dotnet restore src
-          dotnet build src/bunit.core/ -c Release --no-restore -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
-          dotnet build src/bunit.web/ -c Release --no-restore -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
-          dotnet build src/bunit.xunit/ -c Release --no-restore -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
-          dotnet build src/bunit.testassets/ -c Release --no-restore
+        run: dotnet build src -c Release -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
       - name: Running unit tests
-        run: |
-          dotnet test src/bunit.core.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
-          dotnet test src/bunit.web.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
-          dotnet test src/bunit.xunit.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
+        run: dotnet test src -c Release --no-build --no-restore --verbosity normal /nowarn:CS1591
+
       - name: Creating library package
         run: |
           dotnet pack src/bunit.core/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
           dotnet pack src/bunit.web/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
           dotnet pack src/bunit.xunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
           dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+      
       - name: Buidling template package
         run: dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages
       - name: Verifying template
@@ -75,3 +76,13 @@ jobs:
           dotnet new bunit --no-restore -o ${GITHUB_WORKSPACE}/Test
           dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/packages
           dotnet test ${GITHUB_WORKSPACE}/Test
+          
+      - name: Push packages to GitHub Package Registry
+        run: |
+           for f in ${GITHUB_WORKSPACE}/packages/*.nupkg
+           do
+             curl -vX PUT -u "egil:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/egil/
+           done
+        shell: bash          
+#      - name: Push packages to GitHub Package Registry
+#        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' --skip-duplicate
