--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2   
-      
+        with:
+          fetch-depth: 0
+          
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
