--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2   
         with:
           fetch-depth: 0
-          
+
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
@@ -36,10 +36,49 @@ jobs:
           }
 
       - name: Build library
-        run: dotnet build src -c Release -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+        run: dotnet build src -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
 
       - name: Running unit tests
-        run: dotnet test src -c Release --no-build --no-restore --verbosity normal /nowarn:CS1591
+        run: dotnet test src --no-build --no-restore --verbosity normal /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=lcov
+
+      - uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: src/bunit.core.tests/coverage/coverage.net5.0.info
+          parallel: true
+          flag-name: "bunit.core.net5.0"
+      - uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: src/bunit.core.tests/coverage/coverage.netcoreapp3.1.info
+          parallel: true
+          flag-name: "bunit.core.netcoreapp3.1"
+
+      - uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: src/bunit.web.tests/coverage/coverage.net5.0.info
+          parallel: true
+          flag-name: "bunit.web.net5.0"
+      - uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: src/bunit.web.tests/coverage/coverage.netcoreapp3.1.info
+          parallel: true
+          flag-name: "bunit.web.netcoreapp3.1"
+
+      - uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: src/bunit.xunit.tests/coverage/coverage.net5.0.info
+          parallel: true
+          flag-name: "bunit.xunit.net5.0"
+      - uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: src/bunit.xunit.tests/coverage/coverage.netcoreapp3.1.info
+          parallel: true
+          flag-name: "bunit.xunit.netcoreapp3.1"
 
   dotnet-format:
     runs-on: ubuntu-latest
