--- a/.github/workflows/publish-nuget-force.yml
+++ b/.github/workflows/publish-nuget-force.yml
@@ -12,22 +12,27 @@ env:
   BRANCH: 'main'  
 
 jobs:  
-  build:
-    name: Build and verify library    
+  nuget-release:
     runs-on: ubuntu-latest  
     steps:
       - uses: actions/checkout@v2   
         with:
           fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+      
       - uses: dotnet/nbgv@master
         with:
           setAllVars: true
+
       - name: Setting VERSION and BRANCH env
-        run: echo "::set-env name=VERSION::$NBGV_SimpleVersion$NBGV_PrereleaseVersion"
+        run: |
+          echo "::set-env name=VERSION::$NBGV_SimpleVersion$NBGV_PrereleaseVersion"
+          echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["*.csproj", "**/*.csproj"]'
+
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
@@ -46,40 +51,42 @@ jobs:
             Write-Host Copying from $from to $to;
             Copy-Item "$from\*" $to -Recurse -Force;
           } 
+
       - name: Building library
-        run: |
-          dotnet restore src
-          dotnet build src/bunit.core/ -c Release --no-restore -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
-          dotnet build src/bunit.web/ -c Release --no-restore -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
-          dotnet build src/bunit.xunit/ -c Release --no-restore -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
-          dotnet build src/bunit.testassets/ -c Release --no-restore 
+        run: dotnet build src -c Release -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
+
       - name: Running unit tests
-        run: |
-          dotnet test src/bunit.core.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
-          dotnet test src/bunit.web.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
-          dotnet test src/bunit.xunit.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
+        run: dotnet test src /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\" /p:UseSourceLink=true
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+      
       - name: Creating library package
         run: |
           dotnet pack src/bunit.core/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
           dotnet pack src/bunit.web/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
           dotnet pack src/bunit.xunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
           dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
+      
       - name: Buidling template package
         run: dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages /p:PublicRelease=true
+      
       - name: Verifying template
         run: |
           dotnet new --install ${GITHUB_WORKSPACE}/packages/bunit.template.$VERSION.nupkg
           dotnet new bunit --no-restore -o ${GITHUB_WORKSPACE}/Test
           dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/packages
           dotnet test ${GITHUB_WORKSPACE}/Test
+      
       - name: Push packages to NuGet
-        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate          
+      
       - name: Push packages to GitHub Package Registry
         run: |
            for f in ${GITHUB_WORKSPACE}/packages/*.nupkg
            do
              curl -vX PUT -u "egil:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/egil/
            done
-        shell: bash
-      #- name: Push packages to GitHub Package Registry
-      #  run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s  https://nuget.pkg.github.com/egil/index.json --skip-duplicate
+        shell: bash               
+      # - name: Push packages to GitHub Package Registry
+      #   run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s  https://nuget.pkg.github.com/egil/index.json --skip-duplicate
