--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.organization=egil
-#sonar.projectKey=<replace with the key generated when setting up the project on SonarCloud>
+sonar.projectKey=egil_bUnit
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
